# Quantitative-Trading-Club

./: README.md
LSMC Solution for BSM (Heston, Bates) to derive optimal stopping policy/: lsmc_options_pricing_xpirements.py
charles/: README.txt  backtest.py  config_oih.yaml  core.py  live_paper.py  requirements.txt
eric/itch-playground/: CMakeLists.txt  README.md  config.yaml  decode_adds.py  run_parser.sh  run_simulator.sh
eric/itch-playground/parser/: CMakeLists.txt
eric/itch-playground/parser/include/itch/: itch_parser.h
eric/itch-playground/parser/src/: itch_parser.cpp  main.cpp  udp_consumer.cpp
eric/itch-playground/simulator/: CMakeLists.txt
eric/itto/: Makefile  README.md  a.out  cmd.md  deciphering.c  deciphering2.c  itto_parser.c  slack.cpp
itch_analysis/A/tick/: tick.csv
itch_analysis/A/timeframes/: 15m.csv  1h.csv  1m.csv  30m.csv  5m.csv
itch_analysis/AA/tick/: tick.csv
itch_analysis/AA/timeframes/: 15m.csv  1h.csv  1m.csv  30m.csv  5m.csv
itch_analysis/AAAU/tick/: tick.csv
itch_analysis/AAAU/timeframes/: 15m.csv  1h.csv  1m.csv  5m.csv
itch_analysis/AABA/tick/: tick.csv
itch_analysis/AABA/timeframes/: 15m.csv  1h.csv  1m.csv  30m.csv  5m.csv
itch_analysis/AAC/tick/: tick.csv
itch_analysis/AAC/timeframes/: 15m.csv  1h.csv  1m.csv  30m.csv  5m.csv
itch_analysis/AADR/tick/: tick.csv
itch_analysis/AADR/timeframes/: 15m.csv  1h.csv  1m.csv  30m.csv
itch_analysis/AAL/tick/: tick.csv
itch_analysis/AAL/timeframes/: 15m.csv  1h.csv  1m.csv  30m.csv  5m.csv
itch_analysis/AAMC/tick/: tick.csv
(+45052 files in other folders)
